<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#222222"
    tools:context="com.elsayed.mustafa.bucket.AddAndEditItemActivity">
    <include
        layout="@layout/toolbar"
        android:id="@+id/toolbar">
    </include>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar"
        android:orientation="vertical">
        <LinearLayout
            android:paddingTop="20dp"
            android:paddingStart="20dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingEnd="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="120dp"
                android:src="@drawable/bucket"/>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="10dp">
            </RelativeLayout>
            <EditText
                android:id="@+id/titleEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/titleHint"
                android:backgroundTint="#898989"
                android:textColor="#ffffff"
                android:textColorHint="#898989" />
            <EditText
                android:id="@+id/descriptionEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/descriptionHint"
                android:inputType="textMultiLine"
                android:backgroundTint="#898989"
                android:textColor="#ffffff"
                android:textColorHint="#898989"/>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="10dp">
            </RelativeLayout>
            <Button
                android:id="@+id/dateButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="dateClicked"
                android:background="#ffa500"
                android:text="@string/dateButton"
                android:textStyle="bold" />
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="10dp">
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:orientation="horizontal">
                    <TextView
                        android:id="@+id/latitudeTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=""
                        android:textColor="#FFFFFF"/>
                    <RelativeLayout
                        android:layout_width="5dp"
                        android:layout_height="wrap_content">
                    </RelativeLayout>
                    <TextView
                        android:id="@+id/longitudeTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=""
                        android:textColor="#FFFFFF"/>
                </LinearLayout>
            </RelativeLayout>
        </LinearLayout>
        <fragment
            xmlns:map="http://schemas.android.com/apk/res-auto"
            xmlns:android="http://schemas.android.com/apk/res/android"
            tools:context="com.elsayed.mustafa.bucket.AddAndEditItemActivity"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/map"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>
    <Button
        android:id="@+id/saveButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:onClick="saveClicked"
        android:background="#ea5454"
        android:text="@string/saveButton"
        android:textStyle="bold"/>
</RelativeLayout>


